forget password, clause-check points changes

--- a/src/app/dashboard/manage-audit/manage-audit-summary/manage-audit-summary.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-summary/manage-audit-summary.component.html
@@ -24,7 +24,7 @@
                   <tr class="now_rap text-center sticky_header">
                     <th>S.No.</th>
                     <th>Category</th>
-                    <th>Clause</th>
+                    <th>Audit Area</th>
                     <th>Concerning regulation</th>
                     <th>Judgment</th>
                     <th>Remarks</th>
