--- a/src/app/dashboard/masters/categories/categories-list/categories-list.component.html
+++ b/src/app/dashboard/masters/categories/categories-list/categories-list.component.html
@@ -5,9 +5,9 @@
           <div class="card">
             <div class="card-header">
               <div class="header_card">
-                <h3 class="card-title">Categories Details</h3>
+                <h3 class="card-title">Clause Details</h3>
                 <a *ngIf="isSuperAdmin" (click)="addCategory()" class="btn btn-primary"> 
-                  <img src="../../../../../assets/icons/admin.png" class="side_imgmaster mr-1"> <span class="fon_14">Add Categories</span></a>
+                  <img src="../../../../../assets/icons/admin.png" class="side_imgmaster mr-1"> <span class="fon_14">Add Clause</span></a>
               </div>
             </div>
             <div class="card-body">
@@ -16,7 +16,7 @@
                   <thead>
                     <tr class="sticky_header">
                       <th>S.No</th>
-                      <th>Category Name</th>
+                      <th>Clause Name</th>
                       <th>Status</th>
                       <th *ngIf="isSuperAdmin">Action</th>
                     </tr>
