--- a/src/app/passwords/change-password/change-password.component.css
+++ b/src/app/passwords/change-password/change-password.component.css
@@ -3,7 +3,7 @@ body, html {
     height: 100%  !important;
   }
    .backr_img {
-    background-image: url('../../assets/img/login_mage.png');
+    background-image: url('../../../assets/img/login_mage.png');
   height: 100%;
     background-position: center;
     background-repeat: no-repeat;
