--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -59,6 +59,10 @@
             </div>
             <div class="d-flex align-items-center justify-content-center">
               <div class=" mr-1">
+                <label class="filter_label">Search</label>
+                <input type="text" class="form-control filter_css"  [(ngModel)]="searchText" placeholder="Type to search">
+              </div>
+              <div class=" mr-1">
                 <label class="filter_label">Vendor Code</label>
                 <input type="text" [(ngModel)]="vendorCode" class="form-control  filter_css" placeholder="Vendor Code ">
               </div>
@@ -116,7 +120,7 @@
                 </thead>
                 <tbody>
                   <tr class="tbody_data"
-                    *ngFor="let item of viewPlanListToShow| paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index">
+                    *ngFor="let item of viewPlanListToShow | filter:searchText | paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index">
                     <td>{{item.auditNumber}}</td>
                     <td>{{item.vendorCode}}</td>
                     <td>{{item.vendorName}}</td>
