--- a/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
@@ -60,6 +60,10 @@
                             </div>
                             <div class="d-flex align-items-center justify-content-center">
                                 <div class=" mr-1">
+                                    <label class="filter_label">Search</label>
+                                    <input type="text" class="form-control filter_css"  [(ngModel)]="searchText" placeholder="Type to search">
+                                  </div>
+                                <div class=" mr-1">
                                     <label class="filter_label">Vendor Code</label>
                                     <input type="text" [(ngModel)]="vendorCode" class="form-control inputbox_css  mr-1 filter_css"
                                         placeholder="Vendor Code ">
@@ -113,7 +117,7 @@
                                     </thead>
                                     <tbody>
                                         <tr class="tbody_data"
-                                            *ngFor="let item of viewPlanListToShow | paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index">
+                                            *ngFor="let item of viewPlanListToShow | filter:searchText | paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index">
                                             <td>{{item.auditNumber}}</td>
                                             <td>{{item.vendorCode}}</td>
                                             <td>{{item.vendorName}}</td>
