--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
@@ -16,7 +16,7 @@
                     <thead>
                       <tr class="">
                         <th>S.No</th>
-                        <th>Category</th>
+                        <th>Clause</th>
                         <th class="w_226">Completion Status</th>
                         <th class="w_226">Score</th>
                        
