--- a/src/app/dashboard/masters/regulation/regulation-edit/regulation-edit.component.html
+++ b/src/app/dashboard/masters/regulation/regulation-edit/regulation-edit.component.html
@@ -4,14 +4,14 @@
             <div class="col-md-12">
               <div class="card card-default">
                 <div class="card-header">
-                  <h3 class="card-title">Regulation Details</h3>
+                  <h3 class="card-title">Check Point Details</h3>
                 </div>
                 <form [formGroup]="regulationForm">
                   <div class="card-body">
                     <div class="row">
                       <div class="col-sm-4">
                         <div class="form-group">
-                          <label class="form_label">Regulation Name</label>
+                          <label class="form_label">Check Point Name</label>
                           <textarea class="form-control" 
                           formControlName="name"></textarea>
                         </div>
@@ -25,7 +25,7 @@
                       </div> -->
                       <div class="col-sm-4">
                         <div class="form-group">
-                          <label class="form_label">Categories</label>
+                          <label class="form_label">Clause</label>
                           <select class="form-control" formControlName="categoryId">
                             <option *ngFor="let item of categoryObj" [value]="item.id">{{item.name}}</option>
                           </select>
@@ -33,7 +33,7 @@
                       </div>
                       <div class="col-sm-4">
                         <div class="form-group">
-                          <label class="form_label">Clause</label>
+                          <label class="form_label">Audit Area</label>
                           <select class="form-control" formControlName="auditAreaId">
                             <option *ngFor="let item of auditAreaObj" [value]="item.id">{{item.name}}</option>
                           </select>
