--- a/src/app/passwords/change-password/change-password.component.html
+++ b/src/app/passwords/change-password/change-password.component.html
@@ -17,7 +17,7 @@
       </div>
       <div class="form-group">
         <label for="exampleInputEmail1" class="text_black">New Password</label>
-        <input type="password" class="form-control inputbox_css"  formControlName="password" placeholder="Enter New Password"
+        <input type="password" class="form-control inputbox_css"  formControlName="newPassword" placeholder="Enter New Password"
        >
       </div>
     </div><!--inpiu-->
