--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
@@ -19,38 +19,32 @@
                         <th>Clause</th>
                         <th class="w_226">Completion Status</th>
                         <th class="w_226">Score</th>
-                       
                       </tr>
                     </thead>
                     <tbody>
-                      <tr *ngFor="let item of categoryScoreList;  let i =index;" style="cursor: pointer;" data-toggle="tooltip" data-placement="top" [title]="item.name" class="hover-tr">
+                      <tr *ngFor="let item of categoryScoreList;  let i =index;" style="cursor: pointer;"
+                        data-toggle="tooltip" data-placement="top" [title]="item.name" class="hover-tr">
                         <td (click)="details(item.categoryId)">{{i+1}}.</td>
                         <td (click)="details(item.categoryId)">{{item.name}}</td>
                         <td (click)="details(item.categoryId)">
-                          
-                         
                           <div class="d-flex align-items-center">
-                            <span class="per-text">  {{item.competedRegulation}}/{{item.totalRegulation}}</span>
+                            <span class="per-text"> {{item.competedRegulation}}/{{item.totalRegulation}}</span>
                             <div class="progress  prog-css-bar">
-                             <div class="progress-bar" role="progressbar"  [style.width.%]="item.completePercent"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"> {{item.completePercent}}%
-                             </div>
-                           </div>
-                             <!-- <div class="progress prog-css-bar">
-                             <div class="progress-bar bg-success" role="progressbar" [style.width.%]="item.percentageCompletion"  aria-valuenow="" aria-valuemin="0" aria-valuemax="100"></div>
-                          
-                           
-                         </div> -->
-                       </div>
+                              <div class="progress-bar" role="progressbar" [style.width.%]="item.completePercent"
+                                aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"> {{item.completePercent}}%
+                              </div>
+                            </div>
+                          </div>
                         </td>
                         <td (click)="details(item.categoryId)">
                           <div class="d-flex align-items-center">
-                      <!--    <span class="per-text"> {{item.categoryScore }}/{{item.totalCount}}</span> -->
-                         <div class="progress  prog-css-bar">
-                          <div class="progress-bar" role="progressbar"  [style.width.%]="item.scorePercent"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"> {{item.scorePercent}}%
+                            <div class="progress  prog-css-bar">
+                              <div class="progress-bar" role="progressbar" [style.width.%]="item.scorePercent"
+                                aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"> {{item.scorePercent}}%
+                              </div>
+                            </div>
                           </div>
-                        </div>
-                    </div></td>
-                       
+                        </td>
                       </tr>
                     </tbody>
                   </table>
@@ -58,23 +52,24 @@
               </div>
             </div>
           </div>
-            <div class="flex_direction_media vie-footer">
-              <button class="btn btn-primary mr-1" (click)="viewSummary()">
-                View Summary Details</button>
-              <button class="btn btn-info mr-1" (click)="openVendorModal()">Vendor Attendees
-              </button>
-              <button class="btn btn-danger mr-1"(click)="openCriticalModal()">Critical Observation
-              </button>
-            </div>
+          <div class="flex_direction_media vie-footer">
+            <button class="btn btn-primary mr-1" (click)="viewSummary()">
+              View Summary Details</button>
+            <button class="btn btn-info mr-1" (click)="openVendorModal()">Vendor Attendees
+            </button>
+            <button class="btn btn-danger mr-1" (click)="openCriticalModal()">Critical Observation
+            </button>
+          </div>
           <div class="card-footer">
-          <div class="flex_direction_media ">
-            <div class="d-flex align-items-center d-flex justify-content-between">
-              <div></div>
-            <button (click)="getUsers()" class="btn btn-success mr-1" data-toggle="modal" data-target="#submit" >Submit</button>
-            <button (click)="back()" class="btn btn-default">Back</button>
+            <div class="flex_direction_media ">
+              <div class="d-flex align-items-center d-flex justify-content-between">
+                <div></div>
+                <button (click)="getUsers()" class="btn btn-success mr-1" data-toggle="modal"
+                  data-target="#submit">Submit</button>
+                <button (click)="back()" class="btn btn-default">Back</button>
+              </div>
             </div>
           </div>
-        </div> 
         </div>
       </div>
     </div>
@@ -125,7 +120,8 @@
                                 maxlength="200" formControlName="vendorAttendee">
                             </td>
                             <td class="btn-width p-1">
-                              <button class="btn btn-success btn-add-deatil mr-2 py-1" (click)="addVendorAttendee('')">+</button>
+                              <button class="btn btn-success btn-add-deatil mr-2 py-1"
+                                (click)="addVendorAttendee('')">+</button>
                               <button class="btn btn-danger py-1" *ngIf="i > 0" (click)="removeVendorAttendee(i)"><i
                                   class="fa fa-trash"></i></button>
                             </td>
