--- a/src/app/dashboard/reports/action-plan-observation/action-plan-observation.component.html
+++ b/src/app/dashboard/reports/action-plan-observation/action-plan-observation.component.html
@@ -1,5 +1,17 @@
+<style>
+    @media print {
+      #downloadcta, .form-group {
+        visibility: hidden;
+      }
+    }
+  </style>
 <section class="content p-3">
     <div class="row">
+        <button id="downloadcta" class="btn btn-success d-flex align-items-center ml-1"
+            onclick="window.print();" style="margin-bottom: 10px; width: 110px;">
+           <i class="fas fa-download mr-1 upload_ico"></i>
+           <span class="now_rap">Download</span>
+       </button>
         <div class="col-md-12 p-0">
             <div class="card card-default">
                 <div class="card-body">
