--- a/src/app/dashboard/reports/executive-summary/executive-summary.component.html
+++ b/src/app/dashboard/reports/executive-summary/executive-summary.component.html
@@ -1,3 +1,10 @@
+<style>
+  @media print {
+    #downloadcta, .form-group {
+      visibility: hidden;
+    }
+  }
+</style>
 <section class="content p-3">
   <div class="row">
       <div class="col-md-12 p-0">
@@ -5,7 +12,11 @@
               <div class="card-header">
                    <div class="header_card">
                        <h3 class="card-title">Audit Area Details</h3>
-                       <button class="btn btn-success">Download PDF</button>
+                       <button id="downloadcta" class="btn btn-success d-flex align-items-center ml-1"
+                       onclick="window.print();" style="margin-bottom: 10px; width: 110px;">
+                      <i class="fas fa-download mr-1 upload_ico"></i>
+                      <span class="now_rap">Download</span>
+                  </button>
                     </div>
                </div>
                <div class="card-body">
