--- a/src/app/shared/component/report-filter/report-filter.component.html
+++ b/src/app/shared/component/report-filter/report-filter.component.html
@@ -1,77 +1,82 @@
-<div class="row">
-    <div class="col-md-12 p-3">
-      <div class="card mb-0">
-        <div class="card-header">
-          <h5 class="card-title"> Search Filter</h5>
-          <div class="card-tools">
-            <button type="button" class="btn btn-tool" data-card-widget="collapse">
-              <i class="fas fa-minus"></i>
-            </button>
-          </div>
+<style>
+  @media print {
+    #filters {
+      display: none;
+    }
+  }
+</style>
+<div class="row" id="filters">
+  <div class="col-md-12 p-3">
+    <div class="card mb-0">
+      <div class="card-header">
+        <h5 class="card-title"> Search Filter</h5>
+        <div class="card-tools">
+          <button type="button" class="btn btn-tool" data-card-widget="collapse">
+            <i class="fas fa-minus"></i>
+          </button>
         </div>
-        <div class="card-body">
-          <div class="row">
-            <div class="col-3">
-                <div class="form-group">
-                    <label>Select Year</label>
-                    <div class="input-group">
-                      <select [(ngModel)]="yearDropDownValue" placeholder="Select MSIL" class="custom-control custom-select"
-                        [ngModelOptions]="{ standalone: true }">
-                        <option value="" class="max-width">Select All</option>
-                        <option [value]="item.value" *ngFor="let item of yearDropDown">
-                          {{
-                          item.text
-                          }}
-                        </option>
-                      </select>
-                    </div>
-                  </div>
-              <!-- <div class="form-group">
+      </div>
+      <div class="card-body">
+        <div class="row">
+          <div class="col-3">
+            <div class="form-group">
+              <label>Select Year</label>
+              <div class="input-group">
+                <select [(ngModel)]="yearDropDownValue" placeholder="Select MSIL" class="custom-control custom-select"
+                  [ngModelOptions]="{ standalone: true }">
+                  <option value="" class="max-width">Select All</option>
+                  <option [value]="item.value" *ngFor="let item of yearDropDown">
+                    {{
+                    item.text
+                    }}
+                  </option>
+                </select>
+              </div>
+            </div>
+            <!-- <div class="form-group">
                 <label>Select From Date <span class="text-danger">*</span></label>
                 <div class="input-group">
                     <input type="date" [(ngModel)]="formdate" class="form-control  filter_css" placeholder="Date ">
                 </div>
               </div> -->
+          </div>
+          <div class="col-3">
+            <div class="form-group">
+              <label>Select Month</label>
+              <div class="input-group">
+                <select [(ngModel)]="monthDropDownValue" placeholder="Select Month" class="custom-control custom-select"
+                  [ngModelOptions]="{ standalone: true }">
+                  <option value="" class="max-width">Select All</option>
+                  <option [value]="item.id" *ngFor="let item of monthDropDown">
+                    {{
+                    item.name
+                    }}
+                  </option>
+                </select>
+              </div>
             </div>
-            <div class="col-3">
-                <div class="form-group">
-                    <label>Select Month</label>
-                    <div class="input-group">
-                      <select [(ngModel)]="monthDropDownValue" placeholder="Select Month" class="custom-control custom-select"
-                         [ngModelOptions]="{ standalone: true }">
-                        <option value="" class="max-width">Select All</option>
-                        <option [value]="item.id" *ngFor="let item of monthDropDown">
-                          {{
-                          item.name
-                          }}
-                        </option>
-                      </select>
-                    </div>
-                  </div>
-              <!-- <div class="form-group">
+            <!-- <div class="form-group">
                 <label>Select To Date <span class="text-danger">*</span></label>
                 <div class="input-group">
                     <input type="date" [(ngModel)]="todate" class="form-control  filter_css" placeholder="Date ">
                 </div>
               </div> -->
-            </div>
-            <div class="col-3">
-              <!-- <label>Location</label>
+          </div>
+          <div class="col-3">
+            <!-- <label>Location</label>
               <div class="input-group">
               </div> -->
-            </div>
           </div>
         </div>
-        <div class="card-footer">
-          <button type="button" class="btn btn-primary"
-          (click)="reloadDatawithFilter()">
+      </div>
+      <div class="card-footer">
+        <button type="button" class="btn btn-primary" (click)="reloadDatawithFilter()">
           Apply
         </button>
-        <button type="button" class="btn btn-secondary ml-2"
-        (click)="resetForm()">
-        Reset
-      </button>
-          </div>
+        <button type="button" class="btn btn-secondary ml-2" (click)="resetForm()">
+          Reset
+        </button>
       </div>
     </div>
   </div>
+</div>
