--- a/src/app/dashboard/audit-plan/view-plan/view-plan-assign/view-plan-assign.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-assign/view-plan-assign.component.html
@@ -11,7 +11,7 @@
           <div class="card-body">
             <form [formGroup]="assignAuditorForm">
             
-              <div class="table-responsive  overflow-visible" style="">
+              <div class="table-responsive  overflow-visible" >
                 <table class="table table-bordered" formArrayName="assignAuditor">
                   <thead class="sticky_header">
                     <tr>
