--- a/src/app/dashboard/reports/action-plan-vendor/action-plan-vendor.component.html
+++ b/src/app/dashboard/reports/action-plan-vendor/action-plan-vendor.component.html
@@ -5,6 +5,84 @@
       }
     }
   </style>
+  <div class="row">
+    <div class="col-md-12 p-3">
+        <div class="card mb-0">
+            <div class="card-header">
+                <h5 class="card-title"> Search Filter</h5>
+                <div class="card-tools">
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                        <i class="fas fa-minus"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="form-group">
+                            <label>Select Year</label>
+                            <div class="input-group">
+                                <select [(ngModel)]="yearDropDownValue" placeholder="Select MSIL"
+                                    class="custom-control custom-select" [ngModelOptions]="{ standalone: true }">
+                                    <option value="" class="max-width">Select All</option>
+                                    <option [value]="item.value" *ngFor="let item of yearDropDown">
+                                        {{
+                                        item.text
+                                        }}
+                                    </option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="form-group">
+                          <label>Select Month</label>
+                          <div class="input-group">
+                            <select [(ngModel)]="monthDropDownValue" placeholder="Select Month" class="custom-control custom-select"
+                              [ngModelOptions]="{ standalone: true }">
+                              <option value="" class="max-width">Select All</option>
+                              <option [value]="item.id" *ngFor="let item of monthDropDown">
+                                {{
+                                item.name
+                                }}
+                              </option>
+                            </select>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="form-group">
+                          <label>Select Auditor</label>
+                          <div class="input-group">
+                            <ng-select [items]="auditorList" bindLabel="code" bindValue="id"
+                            [(ngModel)]="auditorId"  [ngModelOptions]="{ standalone: true }" class="form-control"
+                            (search)="searchAuditor($event.term)" >
+                          </ng-select> 
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                    <div class="form-group">
+                        <label>Select Date <span class="text-danger">*</span></label>
+                        <div class="input-group">
+                            <input type="date" [(ngModel)]="auditDate" class="form-control  filter_css" placeholder="Date ">
+                        </div>
+                      </div> 
+                  </div>
+                 
+            </div>
+            <div class="card-footer">
+                <button type="button" class="btn btn-primary" (click)="reloadDatawithFilter()">
+                    Apply
+                </button>
+                <button type="button" class="btn btn-secondary ml-2" (click)="resetForm()">
+                    Reset
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
 <section class="content p-3">
     <div class="row">
         <button id="downloadcta" class="btn btn-success d-flex align-items-center ml-1"
@@ -17,7 +95,7 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-3 offset-md-9">
-                            <div class="form-group">
+                          <!--   <div class="form-group">
                                 <label class="form_label">Filter</label>
                                 <select class="form-control" name="actionfilter" [(ngModel)]="selectedActionFilter"
                                     (change)='onFilterSelected()'>
@@ -26,12 +104,12 @@
                                     <option value="auditor">Auditor</option>
                                     <option value="date">Date</option>
                                 </select>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <canvas baseChart [data]="actionPlanData" height="100%" [type]="'bar'" [options]="actionPlanOptions">
+                            <canvas baseChart [data]="salesData" height="100%" [type]="'bar'" [options]="actionPlanOptions">
                             </canvas>
                         </div>
                     </div>
