--- a/src/app/dashboard/reports/average-defect-supplier/average-defect-supplier.component.html
+++ b/src/app/dashboard/reports/average-defect-supplier/average-defect-supplier.component.html
@@ -5,6 +5,82 @@
       }
     }
   </style>
+    <div class="row">
+        <div class="col-md-12 p-3">
+            <div class="card mb-0">
+                <div class="card-header">
+                    <h5 class="card-title"> Search Filter</h5>
+                    <div class="card-tools">
+                        <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                            <i class="fas fa-minus"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-3">
+                            <div class="form-group">
+                                <label>Select Year</label>
+                                <div class="input-group">
+                                  <select [(ngModel)]="fiscalYearValue" placeholder="Select Month" class="custom-control custom-select"
+                                    [ngModelOptions]="{ standalone: true }">
+                                    <option value="" class="max-width">Select All</option>
+                                    <option [value]="item.id" *ngFor="let item of fiscalYearArr">
+                                      {{
+                                      item.text
+                                      }}
+                                    </option>
+                                  </select>
+                                </div>
+                              </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="form-group">
+                                <label>From Year</label>
+                                <div class="input-group">
+                                  <select [(ngModel)]="fromYear" placeholder="Select Month" class="custom-control custom-select"
+                                    [ngModelOptions]="{ standalone: true }">
+                                    <option value="" class="max-width">Select All</option>
+                                    <option [value]="item.id" *ngFor="let item of fiscalYearArr">
+                                      {{
+                                      item.text
+                                      }}
+                                    </option>
+                                  </select>
+                                </div>
+                              </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="form-group">
+                                <label>To Year</label>
+                                <div class="input-group">
+                                  <select [(ngModel)]="toYear" placeholder="Select Month" class="custom-control custom-select"
+                                    [ngModelOptions]="{ standalone: true }">
+                                    <option value="" class="max-width">Select All</option>
+                                    <option [value]="item.id" *ngFor="let item of fiscalYearArr">
+                                      {{
+                                      item.text
+                                      }}
+                                    </option>
+                                  </select>
+                                </div>
+                              </div>
+                        </div>
+    
+                    </div>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-primary" (click)="reloadDatawithFilter()">
+                            Apply
+                        </button>
+                        <button type="button" class="btn btn-secondary ml-2" (click)="resetForm()">
+                            Reset
+                        </button>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+</div>
 <section class="content p-3">
     <div class="row">
         <button id="downloadcta" class="btn btn-success d-flex align-items-center ml-1"
@@ -15,16 +91,19 @@
         <div class="col-md-12 p-0">
             <div class="card card-default">
                 <div class="card-body">
-                    <div class="row">
+                   <!--  <div class="row">
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label class="form_label">Filter</label>
-                                <select class="form-control" name="filter" [(ngModel)]="selectedFilter"
-                                    (change)='onFilterSelected()'>
-                                    <option value="month">VSA done in Fiscal Year</option>
-                                    <option value="year">Year</option>
-                                    <option value="location">Location</option>
-                                </select>
+                                <select [(ngModel)]="fiscalYearValue" placeholder="Select Month" class="custom-control custom-select"
+                                [ngModelOptions]="{ standalone: true }">
+                                <option value="" class="max-width">Select All</option>
+                                <option [value]="item.id" *ngFor="let item of fiscalYearArr">
+                                  {{
+                                  item.text
+                                  }}
+                                </option>
+                              </select>
                             </div>
                         </div>
                         <div class="col-md-3">
@@ -36,7 +115,7 @@
                                 </select>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="row">
                         <div class="col-md-12">
                             <canvas baseChart [data]="salesData" height="100%" [type]="'bar'" [options]="chartOptions">
@@ -52,22 +131,22 @@
                                         <tr class="now_rap text-center sticky_header">
                                             <th>Supplier Declared</th>
                                             <th>No. of Supplier</th>
-                                            <th>No. of Defects(20-21)</th>
+                                            <th>No. of Defects {{fromYear}}-{{fromYearFis}}</th>
                                             <th>Avg. Defect / Supplier / Month</th>
-                                            <th>No. of Defects 21-22 (Till Dec)</th>
+                                            <th>No. of Defects {{toYear}}-{{toYearFis}}</th>
                                             <th>Avg. Defect / Supplier / Month</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr class="tbody_data">
-                                            <td>VSA Green</td>
-                                            <td>161</td>
-                                            <td>972</td>
-                                            <td>0.55</td>
-                                            <td>519</td>
-                                            <td>0.36</td>
+                                        <tr class="tbody_data" *ngFor="let item of tableData;">
+                                            <td>VSA{{item.status}}</td>
+                                            <td>{{item.supplier1}}</td>
+                                            <td>{{item.totalDefect1}}</td>
+                                            <td>{{item.avgDef1}}</td>
+                                            <td>{{item.totalDefect2}}</td>
+                                            <td>{{item.avgDef2}}</td>
                                         </tr>
-                                        <tr class="tbody_data">
+     <!--                                    <tr class="tbody_data">
                                             <td>VSA Yellow</td>
                                             <td>104</td>
                                             <td>955</td>
@@ -82,7 +161,7 @@
                                             <td>0.98</td>
                                             <td>24</td>
                                             <td>0.53</td>
-                                        </tr>
+                                        </tr> -->
                                     </tbody>
                                 </table>
                             </div>
