--- a/src/app/dashboard/reports/average-defect/average-defect.component.html
+++ b/src/app/dashboard/reports/average-defect/average-defect.component.html
@@ -5,6 +5,50 @@
       }
     }
   </style>
+  <div class="row">
+    <div class="col-md-12 p-3">
+        <div class="card mb-0">
+            <div class="card-header">
+                <h5 class="card-title"> Search Filter</h5>
+                <div class="card-tools">
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                        <i class="fas fa-minus"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="form-group">
+                            <label>Select Year</label>
+                            <div class="input-group">
+                              <select [(ngModel)]="fiscalYearValue" placeholder="Select Month" class="custom-control custom-select"
+                                [ngModelOptions]="{ standalone: true }">
+                                <option value="" class="max-width">Select All</option>
+                                <option [value]="item.id" *ngFor="let item of fiscalYearArr">
+                                  {{
+                                  item.text
+                                  }}
+                                </option>
+                              </select>
+                            </div>
+                          </div>
+                    </div>
+
+                </div>
+                <div class="text-center">
+                    <button type="button" class="btn btn-primary" (click)="reloadDatawithFilter()">
+                        Apply
+                    </button>
+                    <button type="button" class="btn btn-secondary ml-2" (click)="resetForm()">
+                        Reset
+                    </button>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+</div>
 <section class="content p-3">
     <div class="row">
         <button id="downloadcta" class="btn btn-success d-flex align-items-center ml-1"
