--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -293,14 +293,14 @@
                   </p>
                 </a>
               </li>
-              <li class="nav-item">
+             <!--  <li class="nav-item">
                 <a routerLink="/report/executive-summary" class="nav-link">
                   <img src="../../assets/icons/lightbulb.png" class="side_img">
                   <p>
                     Executive Summary
                   </p>
                 </a>
-              </li>
+              </li> -->
             </ul>
           </li>
         </ul>
