--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -278,6 +278,14 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a routerLink="/report/clause-audit-wise-score" class="nav-link">
+                  <img src="../../assets/icons/lightbulb.png" class="side_img">
+                  <p>
+                    Clause Wise Audit Wise Score Trend
+                  </p>
+                </a>
+              </li>
+              <li class="nav-item">
                 <a routerLink="/report/vendor-wise-score" class="nav-link">
                   <img src="../../assets/icons/lightbulb.png" class="side_img">
                   <p>
