repeat issue report & api

--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -294,10 +294,26 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a routerLink="/report/vendor-audit-wise-score" class="nav-link">
+                  <img src="../../assets/icons/lightbulb.png" class="side_img">
+                  <p>
+                    Vendor wise Audit Wise Score Trend
+                  </p>
+                </a>
+              </li>
+              <li class="nav-item">
                 <a routerLink="/report/trade-repeat" class="nav-link">
                   <img src="../../assets/icons/lightbulb.png" class="side_img">
                   <p>
                     Trend of repeat observations
+                  </p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a routerLink="/report/repeat-audit-trend" class="nav-link">
+                  <img src="../../assets/icons/lightbulb.png" class="side_img">
+                  <p>
+                    Trend of repeat observations Audit Wise
                   </p>
                 </a>
               </li>
