--- a/src/app/dashboard/reports/vendor-audit-wise-score/vendor-audit-wise-score.component.html
+++ b/src/app/dashboard/reports/vendor-audit-wise-score/vendor-audit-wise-score.component.html
@@ -5,7 +5,7 @@
       }
     }
   </style>
-   <div class="row">
+  <div class="row">
     <div class="col-md-12 p-3">
         <div class="card mb-0">
             <div class="card-header">
@@ -101,7 +101,7 @@
         <div class="col-md-12 p-0">
             <div class="card card-default">
                 <div class="card-body">
-                    <!-- <div class="row">
+                  <!--   <div class="row">
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label class="form_label">Filter</label>
@@ -118,11 +118,13 @@
                         </div>
                     </div> -->
                     <div class="row">
-                        <div class="col-md-12">
-                            <canvas baseChart [data]="yearWiseVSAData" height="100%" [type]="'line'" [options]="yearWiseVSAOptions">
+                        <div class="col-md-8">
+                            <canvas baseChart [data]="yearWiseVSAData" height="200%" [type]="'line'" [options]="yearWiseVSAOptions">
                             </canvas>
                         </div>
+                        <div class="col-md-2">
 
+                        </div>
                     </div>
                 </div>
             </div>
